// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate (--config-format) name uses the right format 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description             | 💼 |
| :----------------------------- | :---------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--config-format) name uses the right format 2`] = `
"# test/no-foo

💼 This rule is enabled in the ✅ \`recommended\` config.

📝 Description for no-foo.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--config-format) plugin-colon-prefix-name uses the right format 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`plugin:test/recommended\` configuration.

| Name                           | Description             | 💼 |
| :----------------------------- | :---------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--config-format) plugin-colon-prefix-name uses the right format 2`] = `
"# test/no-foo

💼 This rule is enabled in the ✅ \`plugin:test/recommended\` config.

📝 Description for no-foo.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--config-format) prefix-name uses the right format 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`test/recommended\` configuration.

| Name                           | Description             | 💼 |
| :----------------------------- | :---------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--config-format) prefix-name uses the right format 2`] = `
"# test/no-foo

💼 This rule is enabled in the ✅ \`test/recommended\` config.

📝 Description for no-foo.

<!-- end auto-generated rule header -->
"
`;
